0.9.0 (currently working on)
- [#3292] Feature: Add a configuration to BE user groups in which sysfolder registration records created in the "events" BE module should be stored
- [#3455] Fix: The function createCsvExportOfRegistrations does not exist
- [#3437] Change: Use the same salutation in the back-end form e-mails as in the thank-you e-mails
- [#3291] Feature: Add a configuration to BE user groups in which sysfolder event records created in the "events" BE module should be stored
- [#3299] Change: Change the %s in the BE module form mails to %salutation/%anrede
- [#3279] Change: Drop the picture from the speakers SQL and TCA
- [#2619] Cleanup: Refactor tx_seminars_pi2
- [#3445] Fix: Events with nonzero number of max registrations not shown if "show only events with vacancies" is checked
- [#3440] Fix: Crash in the flexforms: Class not found
- [#3295] Change: Hide the cancel/confirm buttons in the BE module if the logged-in user has no write access
- [#3438] Change: The "hide fully-booked events" filter should hide events even if they have a waiting list
- [#3204] Fix: In the confirmation step of the registration process price and payment method are shown even if disabled, original patch by Donatas Elvikis
- [#3333] Fix: Unused variable $formData in eventEditor_testcase::test_eventEditorForEventHiddenBeforeEditing_DoesNotSendMail
- [#3334] Fix: Unused variable $secondEventUid in pi2_testcase::testCreateAndOutputListOfEventsHasResultEndingWithCariageReturnAndLineFeed
- [#3224] Fix: Make sure all <script> tags have proper CDATA
- [#3429] Change: Use the flag useStoragePid when filtering records by GRSP in the flexforms and the FE editor
- [#3295] Fix: Hide the cancel/confirm buttons in the BE module if the logged-in user has no write access
- [#3425] Fix: Kids dropdown in step 1 missing 0 or "none" selection.  Only has choice of 1,2,3,4 or 5
- [#3411] Fix: All data from the selector widget should be safeguarded